force-app/main/default/objects/cgcloud__Warehouse__c/cgcloud__Warehouse__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the warehouse object. An organizational segmentation for the purpose of maintaining materials that are stored in different places.</description>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>