force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Address_Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Address_Note__c</fullName>
    <description>Description for the Address. Can contain the building name and other hints to find the site.</description>
    <label>Address Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>