force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Business_Unit__c</fullName>
    <description>Reference to the book keeping segment.</description>
    <label>Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>