force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Country__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Country__c</fullName>
    <description>Describes country.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>at</fullName>
            </value>
            <value>
                <fullName>au</fullName>
            </value>
            <value>
                <fullName>be</fullName>
            </value>
            <value>
                <fullName>br</fullName>
            </value>
            <value>
                <fullName>ca</fullName>
            </value>
            <value>
                <fullName>ch</fullName>
            </value>
            <value>
                <fullName>cl</fullName>
            </value>
            <value>
                <fullName>cn</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>gb</fullName>
            </value>
            <value>
                <fullName>ie</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>jp</fullName>
            </value>
            <value>
                <fullName>mx</fullName>
            </value>
            <value>
                <fullName>nl</fullName>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>us</fullName>
            </value>
            <value>
                <fullName>za</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>