force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__County__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__County__c</fullName>
    <description>Name of the county.</description>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>