force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__District__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__District__c</fullName>
    <description>District of a city or state.</description>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>