force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Fax__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fax__c</fullName>
    <description>Fax number.</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>