force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__GLN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__GLN__c</fullName>
    <description>Global location number.</description>
    <label>GLN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>