force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__House_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__House_Number__c</fullName>
    <description>Describes where the building ca be found in a street.</description>
    <label>House Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>