force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__International_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__International_Postal_Code__c</fullName>
    <description>Postal code with format valid for every country.</description>
    <label>International Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>