force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Is_Postbox__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Postbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the warehouse is a postbox</description>
    <label>Is Postbox</label>
    <type>Checkbox</type>
</CustomField>