force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Latitude__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Latitude__c</fullName>
    <description>Decimal degree of latitude.</description>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>