force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Longitude__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Longitude__c</fullName>
    <description>Decimal degree of longitude.</description>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>