force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Phone_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phone_1__c</fullName>
    <description>1st phone number.</description>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>