force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Phone_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phone_2__c</fullName>
    <description>2nd phone number.</description>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>