force-app/main/default/objects/cgcloud__Warehouse__c/fields/cgcloud__Postbox__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Postbox__c</fullName>
    <description>Number of a number post box.</description>
    <label>Postbox</label>
    <length>15</length>
    <type>Text</type>
</CustomField>